kubernetes/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shopify
  labels:
    name: shopify
    environment: production
