kubernetes/09-shopify-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopify-service
  namespace: shopify
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30000
  selector:
    app: shopify
