kubernetes/10-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    argocd.argoproj.io/tracking-id: shopify:networking.k8s.io/Ingress:shopify/shopify-ingress
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
  name: shopify-ingress
  namespace: shopify
spec:
  rules:
    http:
      paths:
        - backend:
            service:
              name: shopify-service
              port:
                number: 80
          path: /
          pathType: Prefix
